src/components/game/CardOptions/styles.module.scss
.container {
  width: 100%;
  display: flex;

  .cards {
    width: 1400px;
    margin: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    @media screen and (max-width: 1330px) {
      flex-direction: column;
    }
  }

  .card {
    margin: 15px;
    width: 404px;
    height: 400px;
    position: relative;

    img {
      width: 100%;
      height: 100%;
    }

    .button {
      background-size: cover;
      width: 180px;
      height: 40px;
      position: absolute;
      z-index: 1;
      left: 110px;
      top: 335px;
      cursor: pointer;
    }

    button {
      background-color: transparent;
      background-size: cover;
      border: none;
      width: 195px;
      height: 40px;
      position: absolute;
      z-index: 1;
      left: 105px;
      top: 335px;
      cursor: pointer;

      &.buyButton {
        background-image: url('../../../assets/game/actions-cards/buychest.svg');

        &:hover {
          background-image: url('../../../assets/game/actions-cards/buychest-mouse.svg');
        }

        &:active {
          background-image: url('../../../assets/game/actions-cards/buychest-click.svg');
        }
      }

      &.fusionButton {
        background-image: url('../../../assets/game/actions-cards/horsefuzion.svg');

        &:hover {
          background-image: url('../../../assets/game/actions-cards/horsefuzion-mouse.svg');
        }

        &:active {
          background-image: url('../../../assets/game/actions-cards/horsefuzion-click.svg');
        }
      }

      &.upgradeButton {
        background-image: url('../../../assets/game/actions-cards/upgrade-stable.svg');

        &:hover {
          background-image: url('../../../assets/game/actions-cards/upgrade-stable-mouse.svg');
        }

        &:active {
          background-image: url('../../../assets/game/actions-cards/upgrade-stable-click.svg');
        }
      }
    }
  }
}

